-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9, 6.10, 6.11.0 FF
-
None
-
b6df2827a (6.10)
Consider following code:
function test_dummy_frame() { verify(!webEngineView.mainFrame.isValid); }
Test crashes with:
Thread 1 "tst_qmltests" received signal SIGSEGV, Segmentation fault. 0x00007ffff7e3478e in std::__atomic_base<int>::fetch_sub (this=0x55500c5cec9f, __i=1, __m=std::memory_order_acq_rel) at /usr/lib/gcc/x86_64-pc-linux-gnu/14/include/g++-v14/bits/atomic_base.h:641 641 { return __atomic_fetch_sub(&_M_i, __i, int(__m)); } (gdb) bt #0 0x00007ffff7e3478e in std::__atomic_base<int>::fetch_sub (this=0x55500c5cec9f, __i=1, __m=std::memory_order_acq_rel) at /usr/lib/gcc/x86_64-pc-linux-gnu/14/include/g++-v14/bits/atomic_base.h:641 #1 TestQTNamespace::QAtomicOps<int>::deref<int> (_q_value=<error reading variable: Cannot access memory at address 0x55500c5cec9f>) at /opt/qt/6.11/gcc.debug/include/QtCore/qatomic_cxx11.h:267 #2 0x00007ffff7e34338 in TestQTNamespace::QBasicAtomicInteger<int>::deref (this=0x55500c5cec9f) at /opt/qt/6.11/gcc.debug/include/QtCore/qbasicatomic.h:49 #3 0x00007ffff7e88e2c in TestQTNamespace::QWeakPointer<QtWebEngineCore::WebContentsAdapter>::~QWeakPointer (this=0x7fffffff2390, __in_chrg=<optimized out>) at /opt/qt/6.11/gcc.debug/include/QtCore/qsharedpointer_impl.h:621 #4 0x00007ffff7e8b67e in TestQTNamespace::QWeakPointer<QtWebEngineCore::WebContentsAdapter>::operator= (this=0x55555788fe10, other=...) at /opt/qt/6.11/gcc.debug/include/QtCore/qsharedpointer_impl.h:633 #5 0x00007ffff7e86809 in TestQTNamespace::QWebEngineFrame::operator= (this=0x55555788fe10) at /home/stefan/workspaces-nvme/qt/qt5/qtwebengine.6.11/src/core/api/qwebengineframe.h:24 #6 0x00007ffff7e7ea6e in TestQTNamespace::QQuickWebEngineView::qt_static_metacall (_o=0x7ffebc0bb340, _c=TestQTNamespace::QMetaObject::ReadProperty, _id=27, _a=0x7fffffff2bd0) at /home/stefan/workspaces-nvme/qt/qt5-builds/6.11/qtwebengine.gcc.debug/src/webenginequick/WebEngineQuick_autogen/include/moc_qquickwebengineview_p.cpp:1388 #7 0x00007ffff7e7ee6d in TestQTNamespace::QQuickWebEngineView::qt_metacall (this=0x7ffebc0bb340, _c=TestQTNamespace::QMetaObject::ReadProperty, _id=27, _a=0x7fffffff2bd0) at /home/stefan/workspaces-nvme/qt/qt5-builds/6.11/qtwebengine.gcc.debug/src/webenginequick/WebEngineQuick_autogen/include/moc_qquickwebengineview_p.cpp:1442 #8 0x00007fffcb25a5da in TestQTNamespace::QQmlVMEMetaObject::metaCall (this=0x555559266600, o=0x7ffebc0bb340, c=TestQTNamespace::QMetaObject::ReadProperty, _id=71, a=0x7fffffff2bd0) at /home/stefan/workspaces-nvme/qt/qt5/qtdeclarative.6.11/src/qml/qml/qqmlvmemetaobject.cpp:1226 #9 0x00007fffc9d9ac49 in TestQTNamespace::QMetaObject::metacall (object=0x7ffebc0bb340, cl=TestQTNamespace::QMetaObject::ReadProperty, idx=71, argv=0x7fffffff2bd0) at /home/stefan/workspaces-nvme/qt/qt5/qtbase.6.11/src/corelib/kernel/qmetaobject.cpp:348 #10 0x00007fffcae9766c in TestQTNamespace::QV4::QObjectWrapper::virtualMetacall (object=0x7fffb41ad8c0, call=TestQTNamespace::QMetaObject::ReadProperty, index=71, a=0x7fffffff2bd0)
For Gerrit Dashboard: QTBUG-139710 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
673335,9 | Add qml frame test | dev | qt/qtwebengine | Status: NEW | 0 | 0 |
673990,3 | Fix QML usage of QWebEngineFrame | 6.9 | qt/qtwebengine | Status: NEW | -1 | -1 |
675337,14 | Introduce QQuickWebEngineFrame | dev | qt/qtwebengine | Status: NEW | 0 | 0 |
679883,1 | Fix QML usage of QWebEngineFrame | 6.8 | qt/qtwebengine | Status: NEW | 0 | 0 |
673668,6 | Fix QML usage of QWebEngineFrame | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
673937,2 | Fix QML usage of QWebEngineFrame | 6.10 | qt/qtwebengine | Status: MERGED | +2 | 0 |
675852,1 | Revert "Fix QML usage of QWebEngineFrame" | dev | qt/qtwebengine | Status: ABANDONED | 0 | 0 |