Fix QML usage of QWebEngineFrame

It was considered incorrectly registered, and caused crashes when
used.

Pick-to: 6.10 6.9 6.8
Fixes: QTBUG-139710
Change-Id: I5d99c4e46274ead8330893e4d9e0aa7cc99aefc1
Reviewed-by: Michal Klocek <michal.klocek@qt.io>