src/webenginequick/api/qquickwebengineforeigntypes_p.h
@@ -17,24 +17,25 @@
 //
 
 #include <QtQml/qqml.h>
-#include <QtWebEngineCore/qwebenginedownloadrequest.h>
-#include <QtWebEngineCore/qwebenginenavigationrequest.h>
-#include <QtWebEngineCore/qwebenginescript.h>
-#include <QtWebEngineCore/qwebenginenewwindowrequest.h>
-#include <QtWebEngineCore/qwebengineloadinginfo.h>
-#include <QtWebEngineCore/qwebenginehistory.h>
-#include <QtWebEngineCore/qwebenginequotarequest.h>
-#include <QtWebEngineCore/qwebenginenotification.h>
-#include <QtWebEngineCore/qwebenginefindtextresult.h>
 #include <QtWebEngineCore/qwebenginecertificateerror.h>
-#include <QtWebEngineCore/qwebenginefullscreenrequest.h>
-#include <QtWebEngineCore/qwebenginecontextmenurequest.h>
-#include <QtWebEngineCore/qwebengineregisterprotocolhandlerrequest.h>
-#include <QtWebEngineCore/qwebenginefilesystemaccessrequest.h>
-#include <QtWebEngineCore/qwebenginewebauthuxrequest.h>
-#include <QtWebEngineCore/qwebenginepermission.h>
-#include <QtWebEngineCore/qwebenginedesktopmediarequest.h>
 #include <QtWebEngineCore/qwebengineclienthints.h>
+#include <QtWebEngineCore/qwebenginecontextmenurequest.h>
+#include <QtWebEngineCore/qwebenginedesktopmediarequest.h>
+#include <QtWebEngineCore/qwebenginedownloadrequest.h>
+#include <QtWebEngineCore/qwebenginefilesystemaccessrequest.h>
+#include <QtWebEngineCore/qwebenginefindtextresult.h>
+#include <QtWebEngineCore/qwebengineframe.h>
+#include <QtWebEngineCore/qwebenginefullscreenrequest.h>
+#include <QtWebEngineCore/qwebenginehistory.h>
+#include <QtWebEngineCore/qwebengineloadinginfo.h>
+#include <QtWebEngineCore/qwebenginenavigationrequest.h>
+#include <QtWebEngineCore/qwebenginenewwindowrequest.h>
+#include <QtWebEngineCore/qwebenginenotification.h>
+#include <QtWebEngineCore/qwebenginequotarequest.h>
+#include <QtWebEngineCore/qwebenginepermission.h>
+#include <QtWebEngineCore/qwebengineregisterprotocolhandlerrequest.h>
+#include <QtWebEngineCore/qwebenginescript.h>
+#include <QtWebEngineCore/qwebenginewebauthuxrequest.h>
 
 #if QT_CONFIG(webengine_extensions)
 #include <QtWebEngineCore/qwebengineextensioninfo.h>
@@ -307,6 +308,14 @@ struct ForeignWebEngineExtensionManager
     QML_UNCREATABLE("")
 };
 #endif
+
+struct ForeignWebEngineFrame
+{
+    Q_GADGET
+    QML_FOREIGN(QWebEngineFrame)
+    QML_VALUE_TYPE(webEngineFrame)
+    QML_ADDED_IN_VERSION(6, 8)
+};
 
 QT_END_NAMESPACE
 
